borders and alignment fix

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 *{
     background-image: url(img.jpg);
 }
@@ -58,6 +60,7 @@ h2{
     padding-right:10px;
     padding-left:10px; 
     box-shadow: inset 0px 0px  0px 3px whitesmoke ;
+    margin:auto;
 }
 .video{
 
@@ -69,21 +72,25 @@ h2{
 NAV{
     background-color:rgb(182, 182, 182);
     padding-top:10px;
-    
+    border-top: solid white 3px;
+    border-bottom: solid white 3px;
+    border
 }
 .back{
     background-image: url(img.jpg);
 }
+
+
 @media screen and (max-width:600px) {
 
     NAV{
 width:476px;
 height:176px;
-padding-left:20px;
+
     }
  h1{
      text-align: center;
-     width:576px;
+     width:476px;
  }
  .image {
  margin-left:0px;
